k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qualimetrix-service
  namespace: z-qualimetrix
  labels:
    app: qualimetrix
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: qualimetrix
